Use Cliff Click's high-scale collections instead of IntHashMap.
This should hopefully fix #3394.

Conflicts:
	core/pom.rb
	core/src/main/java/org/jruby/java/invokers/RubyToJavaInvoker.java

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -207,6 +207,11 @@
       <artifactId>options</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.boundary</groupId>
+      <artifactId>high-scale-lib</artifactId>
+      <version>1.0.6</version>
+    </dependency>
   </dependencies>
   <properties>
     <anno.sources>${project.basedir}/target/generated-sources</anno.sources>
